--- a/src/java/com/myapp/struts/ApplicationResource_ru.properties
+++ b/src/java/com/myapp/struts/ApplicationResource_ru.properties
@@ -25,14 +25,14 @@ errors.general=The process did not complete. Details should follow.
 errors.token=Request could not be completed. Operation is not in sequence.
 # -- welcome --
 welcome.title=News Management
-welcome.heading=Welcome to News management!
-welcome.message=It's easy to create news!
+welcome.heading=\u0414\u043e\u0431\u0440\u043e \u043f\u043e\u0436\u0430\u043b\u043e\u0432\u0430\u0442\u044c \u0432 News management!
+welcome.message=\u0421\u043e\u0437\u0434\u0430\u0432\u0430\u0442\u044c \u043d\u043e\u0432\u043e\u0441\u0442\u0438 - \u043b\u0435\u0433\u043a\u043e!
 # -- common --
-footer.message=Copyright EPAM 2014. All rights reserved.
-header.language.en=English
-header.language.ru=Russian
+footer.message=Copyright EPAM 2014. \u0412\u0441\u0435 \u043f\u0440\u0430\u0432\u0430 \u0437\u0430\u0449\u0438\u0449\u0435\u043d\u044b.
+header.language.en=\u0410\u043d\u0433\u043b\u0438\u0439\u0441\u043a\u0438\u0439
+header.language.ru=\u0420\u0443\u0441\u0441\u043a\u0438\u0439
 # -- menu --
-menu.header=News
-menu.label.list=News List
-menu.label.add=Add News
+menu.header=\u041d\u043e\u0432\u043e\u0441\u0442\u0438
+menu.label.list=\u041d\u043e\u0432\u043e\u0441\u0442\u043d\u043e\u0439 \u043b\u0438\u0441\u0442
+menu.label.add=\u0414\u043e\u0431\u0430\u0432\u0438\u0442\u044c \u043d\u043e\u0432\u043e\u0441\u0442\u044c
 
