--- a/src/java/com/myapp/struts/ApplicationResource_ru_RU.properties
+++ b/src/java/com/myapp/struts/ApplicationResource_ru_RU.properties
@@ -52,3 +52,5 @@ news.date=\u0414\u0430\u0442\u0430
 news.brief=\u041a\u0440\u0430\u0442\u043a\u043e\u0435 \u0441\u043e\u0434\u0435\u0440\u0436\u0430\u043d\u0438\u0435
 news.content=\u0421\u043e\u0434\u0435\u0440\u0436\u0430\u043d\u0438\u0435
 
+date.pattern=MM/dd/yyyy
+
